# lsl-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/exg/: Cargo.toml
crates/exg/src/: lib.rs  xdf_writer.rs
crates/lsl-bench/: Cargo.toml
crates/lsl-bench/src/: main.rs
crates/lsl-cli/: Cargo.toml
crates/lsl-cli/src/: main.rs
crates/lsl-convert/: Cargo.toml
crates/lsl-convert/src/: main.rs
crates/lsl-core/: Cargo.toml
crates/lsl-core/benches/: sample_bench.rs
crates/lsl-core/examples/: markers.rs  multi_stream.rs  receive_data.rs  send_data.rs  signal_quality.rs
crates/lsl-core/src/: clock.rs  config.rs  inlet.rs  lib.rs  outlet.rs  postproc.rs  resolver.rs  sample.rs  send_buffer.rs  signal_quality.rs  stream_info.rs  tcp_server.rs  time_receiver.rs  types.rs  udp_server.rs  xml_dom.rs
crates/lsl-core/tests/: unit_tests.rs
crates/lsl-fuzz/: Cargo.toml
crates/lsl-fuzz/fuzz_targets/: fuzz_query_match.rs  fuzz_sample_100.rs  fuzz_sample_110.rs  fuzz_stream_info_xml.rs  fuzz_xml_dom.rs
crates/lsl-fuzz/src/: lib.rs
crates/lsl-gen/: Cargo.toml
crates/lsl-gen/src/: main.rs
crates/lsl-py/: Cargo.toml
crates/lsl-py/src/: lib.rs
crates/lsl-rec/: Cargo.toml
crates/lsl-rec-gui/: Cargo.toml
crates/lsl-rec-gui/src/: main.rs
crates/lsl-rec/src/: hdf5_writer.rs  lib.rs  main.rs  markers.rs  parquet_writer.rs  recording.rs
crates/lsl-rec/tests/: e2e_record.rs
crates/lsl-sys/: Cargo.toml
crates/lsl-sys/src/: lib.rs
crates/lsl-wasm/: Cargo.toml
crates/lsl-wasm/src/: bridge.rs  lib.rs  protocol.rs  wasm_client.rs
crates/lsl-wasm/www/: index.html
crates/rlsl/: Cargo.toml
crates/rlsl-bench/: Cargo.toml
crates/rlsl-bench/src/: main.rs
crates/rlsl-cli/: Cargo.toml
crates/rlsl-cli/src/: main.rs
crates/rlsl-convert/: Cargo.toml
crates/rlsl-fuzz/: Cargo.toml
crates/rlsl-fuzz/fuzz_targets/: fuzz_query_match.rs  fuzz_sample_100.rs  fuzz_sample_110.rs  fuzz_stream_info_xml.rs  fuzz_xml_dom.rs
crates/rlsl-fuzz/src/: lib.rs
crates/rlsl-gen/: Cargo.toml
crates/rlsl-gen/src/: main.rs
crates/rlsl-iroh/: Cargo.toml  README.md
crates/rlsl-iroh/src/: bench.rs  compress.rs  lib.rs  main.rs  protocol.rs  sink.rs  source.rs  ticket.rs
crates/rlsl-iroh/tests/: e2e_iroh.rs  protocol_roundtrip.rs
crates/rlsl-py/: Cargo.toml
crates/rlsl-py/src/: lib.rs
crates/rlsl-rec/: Cargo.toml
crates/rlsl-rec-gui/: Cargo.toml
crates/rlsl-rec-gui/src/: main.rs
crates/rlsl-rec/src/: lib.rs  main.rs  markers.rs  parquet_writer.rs  recording.rs
crates/rlsl-rec/tests/: e2e_record.rs
crates/rlsl-sys/: Cargo.toml
crates/rlsl-sys/src/: lib.rs
crates/rlsl-wasm/: Cargo.toml
crates/rlsl-wasm/src/: bridge.rs  lib.rs  wasm_client.rs
crates/rlsl/benches/: sample_bench.rs
crates/rlsl/examples/: markers.rs  multi_stream.rs  receive_data.rs  send_data.rs  signal_quality.rs
crates/rlsl/src/: clock.rs  lib.rs  resolver.rs
crates/rlsl/tests/: unit_tests.rs
docs/: ARCHITECTURE.md
figures/: bench_data.csv  plot_benchmarks.py  run_benchmarks.sh
tests/: interop_test.c
