[package]
name = "lsl-bench"
description = "LSL throughput & latency benchmark tool"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # binary distributed via GitHub Releases

[[bin]]
name = "lsl-bench"
path = "src/main.rs"

[dependencies]
lsl-core.workspace = true
anyhow.workspace = true
