[package]
name = "lsl-convert"
description = "Offline converter: XDF → Parquet, Parquet → CSV, XDF → CSV"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # binary distributed via GitHub Releases

[[bin]]
name = "lsl-convert"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0"
arrow = { version = "54", features = ["prettyprint", "csv"] }
parquet = { version = "54", features = ["arrow", "zstd"] }
exg.workspace = true
