[package]
name = "lsl-core"
description = "Lab Streaming Layer — pure Rust core library"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
tokio.workspace = true
socket2.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
uuid.workspace = true
hostname.workspace = true
fxhash.workspace = true
log.workspace = true

[dev-dependencies]
criterion.workspace = true
anyhow.workspace = true

[[bench]]
name = "sample_bench"
harness = false
