[package]
name = "lsl-py"
description = "Python bindings for lsl-core — Lab Streaming Layer in pure Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # published to PyPI, not crates.io

[lib]
name = "pylsl"
crate-type = ["cdylib"]

[dependencies]
lsl-core.workspace = true
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
ndarray = "0.16"
