[package]
name = "lsl-rec-gui"
description = "Lab Streaming Layer recorder with eGUI — records LSL streams to XDF files"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # binary distributed via GitHub Releases

[[bin]]
name = "lsl-rec-gui"
path = "src/main.rs"

[dependencies]
lsl-core.workspace = true
lsl-rec = { path = "../lsl-rec" }
tokio.workspace = true
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
egui_plot = "0.31"
anyhow.workspace = true
