[package]
name = "lsl-sys"
description = "Lab Streaming Layer — C ABI shared library (drop-in replacement for liblsl)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # cdylib distributed as pre-built binaries, not a Rust dependency

[lib]
name = "lsl"                    # produces liblsl.dylib / liblsl.so / lsl.dll
crate-type = ["cdylib"]

[dependencies]
lsl-core.workspace = true
