[package]
name = "lsl-wasm"
description = "LSL WebSocket bridge — streams LSL data to browsers via WebSocket + WASM client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # published to npm, not crates.io

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lsl-bridge"
path = "src/bridge.rs"

[dependencies]
# Bridge server (native only)
lsl-core = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.26", optional = true }
futures = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

# Shared types
serde.workspace = true
serde_json = "1.0"

# WASM client
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "BinaryType",
    "console",
], optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["bridge"]
bridge = ["lsl-core", "tokio", "tokio-tungstenite", "futures", "anyhow"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]
