[package]
name = "rlsl-cli"
description = "Unified CLI tool for Lab Streaming Layer — list, gen, record, convert, bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # binary distributed via GitHub Releases / cargo install --git

[[bin]]
name = "rlsl"
path = "src/main.rs"

[dependencies]
rlsl.workspace = true
anyhow.workspace = true
