[package]
name = "rlsl-gen"
description = "Synthetic LSL signal generator — sine, square, noise, chirp, counter waveforms"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # binary distributed via GitHub Releases

[[bin]]
name = "rlsl-gen"
path = "src/main.rs"

[dependencies]
rlsl.workspace = true
anyhow.workspace = true
